# Building-AI-Products-with-OpenAI

./: .gitignore  README.md  playground.ipynb  pyproject.toml
project 1/: Projec1.ipynb
