[tool.poetry]
name = "building-ai-products-with-openai"
version = "0.1.0"
description = ""
authors = ["Marcus Broberg <broberg.marcus@gmail.com>"]
readme = "README.md"
packages = [{include = "building_ai_products_with_openai"}]

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
jupyter-book = "^0.15.1"
numpy = "^1.25.2"
jupyterlab = "^4.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

